Updated Absorption, small fixes
Fixes from last commit; Made absorption calculations physically accurate using data from [this site](http://www.sengpielaudio.com/calculator-air.htm).